# building-your-first-api-with-django-and-django-rest-framework

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
about/: index.html
bonus/: index.html
docs/: bonus.md  index.md  sample.md
docs/images/: index.md
first_api/: db.sqlite3  manage.py
first_api/first_api/: asgi.py  settings.py  urls.py  wsgi.py
first_api/music/: models.py  serializers.py  urls.py  views.py
first_api/music/migrations/: 0001_initial.py
pycon-us-2024/: format.md
sample/: index.html
search/: search_index.json
