[project]
name = "building-your-first-api-with-django-and-django-rest-framework"
version = "0.2.0"
description = "Tutorial for you to learn how to create a API using Django and Django Rest Framework"
readme = "README.md"
authors = ["FeliPython <felipejpa15@gmail.com>"]
license = "CC BY-NC-SA"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15.2",
    "mkdocs-material>=9.5.33",
    "taskipy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.taskipy.tasks]
docs = { cmd = "mkdocs serve", help = "run documentation server" }
r = { cmd = "python first_api/manage.py runserver", help = "run django dev server" }
